@@ -109,11 +109,11 @@
     <maven-assembly-plugin.version>3.8.0</maven-assembly-plugin.version>
     <maven-apache-source-release-assembly-descriptor.version>1.5</maven-apache-source-release-assembly-descriptor.version>
     <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
-    <maven.compiler.source>21</maven.compiler.source>
-    <maven.compiler.target>21</maven.compiler.target>
+    <maven.compiler.source>25</maven.compiler.source>
+    <maven.compiler.target>25</maven.compiler.target>
     <maven-antrun-plugin.version>3.2.0</maven-antrun-plugin.version>
-    <javaVersion>21</javaVersion>
-    <spring-boot.version>3.3.0</spring-boot.version>
+    <javaVersion>25</javaVersion>
+    <spring-boot.version>4.0.6</spring-boot.version>
     <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
     <maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
     <skipTests>false</skipTests>
@@ -418,7 +418,7 @@
           <maxmem>512m</maxmem>
           <compilerArgs>
             <arg>-Xpkginfo:always</arg>
-            <arg>-Xlint:options</arg>
+            <arg>-Xlint:options</arg><arg>--enable-preview</arg>
             <arg>--enable-preview</arg>
           </compilerArgs>
         </configuration>
